--- a/tapaka/meta/main.yml
+++ b/tapaka/meta/main.yml
@@ -1,3 +1,19 @@
+# meta/main.yml
+galaxy_info:
+  author: "YourName"
+  description: "Role to set up Maven, copy files, and configure permissions"
+  company: "YourCompany"
+  license: "MIT"
+  min_ansible_version: "2.9"
+  platforms:
+    - name: "EL"
+      versions:
+        - "8"
+    - name: "Ubuntu"
+      versions:
+        - "20.04"
+
+dependencies: []
 galaxy_info:
   author: your name
   description: your role description
